[gd_scene load_steps=16 format=3 uid="uid://cbe4g60utb2c3"]

[ext_resource type="Script" path="res://MultiplayerTest/MultiplayerGame.gd" id="1_8e57u"]
[ext_resource type="PackedScene" uid="uid://b7sbw33fnm4er" path="res://Player/Player.tscn" id="2_qia5a"]
[ext_resource type="Texture2D" uid="uid://b8sh7i134inr0" path="res://UI/SoundIcons/SoundIcon1.png" id="3_rgrgf"]
[ext_resource type="Texture2D" uid="uid://b146qeq12c8f3" path="res://Arena/Brick.png" id="3_sm1g4"]
[ext_resource type="Texture2D" uid="uid://7gxhvei0xdh0" path="res://Arena/Blood.png" id="4_4uqvw"]
[ext_resource type="Texture2D" uid="uid://cmxm3jqryepuq" path="res://UI/SoundIcons/SoundIcon2.png" id="4_m28de"]
[ext_resource type="Script" path="res://Arena/Pentagram.gd" id="4_r4eg4"]
[ext_resource type="Script" path="res://UI/MuteToggle/MuteToggle.gd" id="5_3g6op"]
[ext_resource type="PackedScene" uid="uid://c1ra0mrd25srh" path="res://Candle/Candle.tscn" id="6_3wg2c"]
[ext_resource type="Texture2D" uid="uid://bkf81iku1b2cq" path="res://UI/Title.png" id="6_380gr"]
[ext_resource type="Script" path="res://Camera/Camera.gd" id="7_jmwej"]

[sub_resource type="Theme" id="Theme_swbii"]
default_font_size = 40

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hblx3"]
texture = ExtResource("3_sm1g4")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_w3q0n"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_hblx3")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_iic0s"]
properties/0/path = NodePath("Camera2D:zoom")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Camera2D:offset")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Pentagram/Label:text")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("Pentagram/Label:self_modulate")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("Pentagram:self_modulate")
properties/4/spawn = true
properties/4/replication_mode = 2

[node name="MultiplayerGame" type="Node2D"]
script = ExtResource("1_8e57u")
player_scene = ExtResource("2_qia5a")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player/Player.tscn")
spawn_path = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1070.0
offset_bottom = -566.0
grow_horizontal = 2
grow_vertical = 2

[node name="Clock" type="Label" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.0
offset_right = 99.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Waiting for other player..."

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.5
offset_right = 75.5
offset_bottom = 27.0
grow_horizontal = 2

[node name="MuteToggle" type="TextureButton" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
toggle_mode = true
texture_normal = ExtResource("3_rgrgf")
texture_pressed = ExtResource("4_m28de")
script = ExtResource("5_3g6op")

[node name="MainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -33.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Title" type="TextureRect" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -315.0
offset_top = -200.0
offset_right = 315.0
offset_bottom = -56.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("6_380gr")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -39.0
offset_right = 22.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "HOST RITUAL"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="ConnectionCode" type="TextEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Ritual ID"

[node name="Join" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "JOIN RITUAL"

[node name="Local" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "START LOCAL MULTIPLAYER RITUAL"

[node name="Pentagram" type="Line2D" parent="."]
z_index = -1
texture_repeat = 2
width = 16.0
texture = ExtResource("4_4uqvw")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("4_r4eg4")
candle_scene = ExtResource("6_3wg2c")

[node name="Label" type="Label" parent="Pentagram"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.5
offset_top = -27.5
offset_right = 305.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_swbii")
horizontal_alignment = 1
autowrap_mode = 3

[node name="FloorCanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="TileMap" type="TileMap" parent="FloorCanvasLayer"]
tile_set = SubResource("TileSet_w3q0n")
format = 2
layer_0/tile_data = PackedInt32Array(-196616, 0, 0, -131080, 0, 0, -65544, 0, 0, -8, 0, 0, 65528, 0, 0, 131064, 0, 0, 196600, 0, 0, 262136, 0, 0, -196615, 0, 0, -131079, 0, 0, -65543, 0, 0, -7, 0, 0, 65529, 0, 0, 131065, 0, 0, 196601, 0, 0, 262137, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, -196613, 0, 0, -131077, 0, 0, -65541, 0, 0, -5, 0, 0, 65531, 0, 0, 131067, 0, 0, 196603, 0, 0, 262139, 0, 0, -196612, 0, 0, -131076, 0, 0, -65540, 0, 0, -4, 0, 0, 65532, 0, 0, 131068, 0, 0, 196604, 0, 0, 262140, 0, 0, -196611, 0, 0, -131075, 0, 0, -65539, 0, 0, -3, 0, 0, 65533, 0, 0, 131069, 0, 0, 196605, 0, 0, 262141, 0, 0, -196610, 0, 0, -131074, 0, 0, -65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, -196609, 0, 0, -131073, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, -262144, 0, 0, -196608, 0, 0, -131072, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, -262143, 0, 0, -196607, 0, 0, -131071, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, -262142, 0, 0, -196606, 0, 0, -131070, 0, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, -262141, 0, 0, -196605, 0, 0, -131069, 0, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, -262140, 0, 0, -196604, 0, 0, -131068, 0, 0, -65532, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, -262139, 0, 0, -196603, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, -262137, 0, 0, -196601, 0, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, -524305, 0, 0, -458769, 0, 0, -393233, 0, 0, -327697, 0, 0, -262161, 0, 0, -196625, 0, 0, -131089, 0, 0, -65553, 0, 0, -17, 0, 0, 65519, 0, 0, 131055, 0, 0, 196591, 0, 0, 262127, 0, 0, 327663, 0, 0, 393199, 0, 0, 458735, 0, 0, 524271, 0, 0, 589807, 0, 0, -524304, 0, 0, -458768, 0, 0, -393232, 0, 0, -327696, 0, 0, -262160, 0, 0, -196624, 0, 0, -131088, 0, 0, -65552, 0, 0, -16, 0, 0, 65520, 0, 0, 131056, 0, 0, 196592, 0, 0, 262128, 0, 0, 327664, 0, 0, 393200, 0, 0, 458736, 0, 0, 524272, 0, 0, 589808, 0, 0, -524303, 0, 0, -458767, 0, 0, -393231, 0, 0, -327695, 0, 0, -262159, 0, 0, -196623, 0, 0, -131087, 0, 0, -65551, 0, 0, -15, 0, 0, 65521, 0, 0, 131057, 0, 0, 196593, 0, 0, 262129, 0, 0, 327665, 0, 0, 393201, 0, 0, 458737, 0, 0, 524273, 0, 0, 589809, 0, 0, -524302, 0, 0, -458766, 0, 0, -393230, 0, 0, -327694, 0, 0, -262158, 0, 0, -196622, 0, 0, -131086, 0, 0, -65550, 0, 0, -14, 0, 0, 65522, 0, 0, 131058, 0, 0, 196594, 0, 0, 262130, 0, 0, 327666, 0, 0, 393202, 0, 0, 458738, 0, 0, 524274, 0, 0, 589810, 0, 0, -524301, 0, 0, -458765, 0, 0, -393229, 0, 0, -327693, 0, 0, -262157, 0, 0, -196621, 0, 0, -131085, 0, 0, -65549, 0, 0, -13, 0, 0, 65523, 0, 0, 131059, 0, 0, 196595, 0, 0, 262131, 0, 0, 327667, 0, 0, 393203, 0, 0, 458739, 0, 0, 524275, 0, 0, 589811, 0, 0, -524300, 0, 0, -458764, 0, 0, -393228, 0, 0, -327692, 0, 0, -262156, 0, 0, -196620, 0, 0, -131084, 0, 0, -65548, 0, 0, -12, 0, 0, 65524, 0, 0, 131060, 0, 0, 196596, 0, 0, 262132, 0, 0, 327668, 0, 0, 393204, 0, 0, 458740, 0, 0, 524276, 0, 0, 589812, 0, 0, -524299, 0, 0, -458763, 0, 0, -393227, 0, 0, -327691, 0, 0, -262155, 0, 0, -196619, 0, 0, -131083, 0, 0, -65547, 0, 0, -11, 0, 0, 65525, 0, 0, 131061, 0, 0, 196597, 0, 0, 262133, 0, 0, 327669, 0, 0, 393205, 0, 0, 458741, 0, 0, 524277, 0, 0, 589813, 0, 0, -524298, 0, 0, -458762, 0, 0, -393226, 0, 0, -327690, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -65546, 0, 0, -10, 0, 0, 65526, 0, 0, 131062, 0, 0, 196598, 0, 0, 262134, 0, 0, 327670, 0, 0, 393206, 0, 0, 458742, 0, 0, 524278, 0, 0, 589814, 0, 0, -524297, 0, 0, -458761, 0, 0, -393225, 0, 0, -327689, 0, 0, -262153, 0, 0, -196617, 0, 0, -131081, 0, 0, -65545, 0, 0, -9, 0, 0, 65527, 0, 0, 131063, 0, 0, 196599, 0, 0, 262135, 0, 0, 327671, 0, 0, 393207, 0, 0, 458743, 0, 0, 524279, 0, 0, 589815, 0, 0, -524296, 0, 0, -458760, 0, 0, -393224, 0, 0, -327688, 0, 0, -262152, 0, 0, 327672, 0, 0, 393208, 0, 0, 458744, 0, 0, 524280, 0, 0, 589816, 0, 0, -524295, 0, 0, -458759, 0, 0, -393223, 0, 0, -327687, 0, 0, -262151, 0, 0, 327673, 0, 0, 393209, 0, 0, 458745, 0, 0, 524281, 0, 0, 589817, 0, 0, -524294, 0, 0, -458758, 0, 0, -393222, 0, 0, -327686, 0, 0, -262150, 0, 0, 327674, 0, 0, 393210, 0, 0, 458746, 0, 0, 524282, 0, 0, 589818, 0, 0, -524293, 0, 0, -458757, 0, 0, -393221, 0, 0, -327685, 0, 0, -262149, 0, 0, 327675, 0, 0, 393211, 0, 0, 458747, 0, 0, 524283, 0, 0, 589819, 0, 0, -524292, 0, 0, -458756, 0, 0, -393220, 0, 0, -327684, 0, 0, -262148, 0, 0, 327676, 0, 0, 393212, 0, 0, 458748, 0, 0, 524284, 0, 0, 589820, 0, 0, -524291, 0, 0, -458755, 0, 0, -393219, 0, 0, -327683, 0, 0, -262147, 0, 0, 327677, 0, 0, 393213, 0, 0, 458749, 0, 0, 524285, 0, 0, 589821, 0, 0, -524290, 0, 0, -458754, 0, 0, -393218, 0, 0, -327682, 0, 0, -262146, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, -524289, 0, 0, -458753, 0, 0, -393217, 0, 0, -327681, 0, 0, -262145, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, -589824, 0, 0, -524288, 0, 0, -458752, 0, 0, -393216, 0, 0, -327680, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, -589823, 0, 0, -524287, 0, 0, -458751, 0, 0, -393215, 0, 0, -327679, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, -589822, 0, 0, -524286, 0, 0, -458750, 0, 0, -393214, 0, 0, -327678, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, -589821, 0, 0, -524285, 0, 0, -458749, 0, 0, -393213, 0, 0, -327677, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, -589820, 0, 0, -524284, 0, 0, -458748, 0, 0, -393212, 0, 0, -327676, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, -589819, 0, 0, -524283, 0, 0, -458747, 0, 0, -393211, 0, 0, -327675, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, -589818, 0, 0, -524282, 0, 0, -458746, 0, 0, -393210, 0, 0, -327674, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, -589817, 0, 0, -524281, 0, 0, -458745, 0, 0, -393209, 0, 0, -327673, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, -589816, 0, 0, -524280, 0, 0, -458744, 0, 0, -393208, 0, 0, -327672, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, -589815, 0, 0, -524279, 0, 0, -458743, 0, 0, -393207, 0, 0, -327671, 0, 0, -262135, 0, 0, -196599, 0, 0, -131063, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, -589814, 0, 0, -524278, 0, 0, -458742, 0, 0, -393206, 0, 0, -327670, 0, 0, -262134, 0, 0, -196598, 0, 0, -131062, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, -589813, 0, 0, -524277, 0, 0, -458741, 0, 0, -393205, 0, 0, -327669, 0, 0, -262133, 0, 0, -196597, 0, 0, -131061, 0, 0, -65525, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, -589812, 0, 0, -524276, 0, 0, -458740, 0, 0, -393204, 0, 0, -327668, 0, 0, -262132, 0, 0, -196596, 0, 0, -131060, 0, 0, -65524, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, -589811, 0, 0, -524275, 0, 0, -458739, 0, 0, -393203, 0, 0, -327667, 0, 0, -262131, 0, 0, -196595, 0, 0, -131059, 0, 0, -65523, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, -589810, 0, 0, -524274, 0, 0, -458738, 0, 0, -393202, 0, 0, -327666, 0, 0, -262130, 0, 0, -196594, 0, 0, -131058, 0, 0, -65522, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, -589809, 0, 0, -524273, 0, 0, -458737, 0, 0, -393201, 0, 0, -327665, 0, 0, -262129, 0, 0, -196593, 0, 0, -131057, 0, 0, -65521, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, -589808, 0, 0, -524272, 0, 0, -458736, 0, 0, -393200, 0, 0, -327664, 0, 0, -262128, 0, 0, -196592, 0, 0, -131056, 0, 0, -65520, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, -589842, 0, 0, -524306, 0, 0, -458770, 0, 0, -393234, 0, 0, -327698, 0, 0, -262162, 0, 0, -196626, 0, 0, -131090, 0, 0, -65554, 0, 0, -18, 0, 0, 65518, 0, 0, 131054, 0, 0, 196590, 0, 0, 262126, 0, 0, 327662, 0, 0, 393198, 0, 0, 458734, 0, 0, 524270, 0, 0, 589806, 0, 0, 655342, 0, 0, -589841, 0, 0, 655343, 0, 0, -589840, 0, 0, 655344, 0, 0, -589839, 0, 0, 655345, 0, 0, -589838, 0, 0, 655346, 0, 0, -589837, 0, 0, 655347, 0, 0, -589836, 0, 0, 655348, 0, 0, -589835, 0, 0, 655349, 0, 0, -589834, 0, 0, 655350, 0, 0, -589833, 0, 0, 655351, 0, 0, -589832, 0, 0, 655352, 0, 0, -589831, 0, 0, 655353, 0, 0, -589830, 0, 0, 655354, 0, 0, -589829, 0, 0, 655355, 0, 0, -589828, 0, 0, 655356, 0, 0, -589827, 0, 0, 655357, 0, 0, -589826, 0, 0, 655358, 0, 0, -589825, 0, 0, 655359, 0, 0, -655360, 0, 0, 589824, 0, 0, -655359, 0, 0, 589825, 0, 0, -655358, 0, 0, 589826, 0, 0, -655357, 0, 0, 589827, 0, 0, -655356, 0, 0, 589828, 0, 0, -655355, 0, 0, 589829, 0, 0, -655354, 0, 0, 589830, 0, 0, -655353, 0, 0, 589831, 0, 0, -655352, 0, 0, 589832, 0, 0, -655351, 0, 0, 589833, 0, 0, -655350, 0, 0, 589834, 0, 0, -655349, 0, 0, 589835, 0, 0, -655348, 0, 0, 589836, 0, 0, -655347, 0, 0, 589837, 0, 0, -655346, 0, 0, 589838, 0, 0, -655345, 0, 0, 589839, 0, 0, -655344, 0, 0, 589840, 0, 0, -655343, 0, 0, -589807, 0, 0, -524271, 0, 0, -458735, 0, 0, -393199, 0, 0, -327663, 0, 0, -262127, 0, 0, -196591, 0, 0, -131055, 0, 0, -65519, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, -655379, 0, 0, -589843, 0, 0, -524307, 0, 0, -458771, 0, 0, -393235, 0, 0, -327699, 0, 0, -262163, 0, 0, -196627, 0, 0, -131091, 0, 0, -65555, 0, 0, -19, 0, 0, 65517, 0, 0, 131053, 0, 0, 196589, 0, 0, 262125, 0, 0, 327661, 0, 0, 393197, 0, 0, 458733, 0, 0, 524269, 0, 0, 589805, 0, 0, 655341, 0, 0, 720877, 0, 0, -655378, 0, 0, 720878, 0, 0, -655377, 0, 0, 720879, 0, 0, -655376, 0, 0, 720880, 0, 0, -655375, 0, 0, 720881, 0, 0, -655374, 0, 0, 720882, 0, 0, -655373, 0, 0, 720883, 0, 0, -655372, 0, 0, 720884, 0, 0, -655371, 0, 0, 720885, 0, 0, -655370, 0, 0, 720886, 0, 0, -655369, 0, 0, 720887, 0, 0, -655368, 0, 0, 720888, 0, 0, -655367, 0, 0, 720889, 0, 0, -655366, 0, 0, 720890, 0, 0, -655365, 0, 0, 720891, 0, 0, -655364, 0, 0, 720892, 0, 0, -655363, 0, 0, 720893, 0, 0, -655362, 0, 0, 720894, 0, 0, -655361, 0, 0, 720895, 0, 0, -720896, 0, 0, 655360, 0, 0, -720895, 0, 0, 655361, 0, 0, -720894, 0, 0, 655362, 0, 0, -720893, 0, 0, 655363, 0, 0, -720892, 0, 0, 655364, 0, 0, -720891, 0, 0, 655365, 0, 0, -720890, 0, 0, 655366, 0, 0, -720889, 0, 0, 655367, 0, 0, -720888, 0, 0, 655368, 0, 0, -720887, 0, 0, 655369, 0, 0, -720886, 0, 0, 655370, 0, 0, -720885, 0, 0, 655371, 0, 0, -720884, 0, 0, 655372, 0, 0, -720883, 0, 0, 655373, 0, 0, -720882, 0, 0, 655374, 0, 0, -720881, 0, 0, 655375, 0, 0, -720880, 0, 0, 655376, 0, 0, -720879, 0, 0, 655377, 0, 0, -720878, 0, 0, -655342, 0, 0, -589806, 0, 0, -524270, 0, 0, -458734, 0, 0, -393198, 0, 0, -327662, 0, 0, -262126, 0, 0, -196590, 0, 0, -131054, 0, 0, -65518, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.7, 0.7)
script = ExtResource("7_jmwej")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_iic0s")

[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
[connection signal="toggled" from="CanvasLayer/HUD/MuteToggle" to="CanvasLayer/HUD/MuteToggle" method="_on_toggled"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Local" to="." method="_on_local_pressed"]
